# trabalho-ed-2018.2

./: Makefile  README.md  arq_0  arq_1  arq_2  arq_3  arq_3002006  arq_4  arq_E.T. the Extra-Terrestrial1982  arq_Forrest Gump1994  arq_Friends S3E25: The One at the Beach1997  arq_Snow White and the Huntsman2012  arquivo.c  arquivotrab.txt  arvore_b.c  arvore_b.h  executavel
__MACOSX/: ._arvore-b-disco
__MACOSX/arvore-b-disco/: ._.idea  ._CMakeLists.txt  ._Makefile  ._arvore_b.c  ._arvore_b.h  ._cliente.c  ._cliente.h  ._cmake-build-debug  ._lista_clientes.c  ._lista_clientes.h  ._lista_nos.c  ._lista_nos.h  ._metadados.c  ._metadados.h  ._no.c  ._no.h  ._test_arvore_b.c  ._ufftest.h
arvore-b-disco/: CMakeLists.txt  arquivo.c  arvore_b.h  test_arvore_b.c
